deployment/base/customer-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
  labels:
    app: customer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
      app.type: microservice
  template:
    metadata:
      labels:
        app: customer-service
        app.type: microservice
      annotations:
        sidecar.opentelemetry.io/inject: "otel-collector"
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
        - name: customer-service
          image: okworkshopacr.azurecr.io/customer:latest
          ports:
            - containerPort: 8080
              name: http
