deployment/base/customer-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: service
    - protocol: TCP
      port: 8888
      targetPort: 8888
      name: collector
    - protocol: TCP
      port: 8889
      targetPort: 8889
      name: prometheus
